# patoline

./: .authorspellings  .gitignore  .travis.yml  Badness.ml  Badness.mli  Bezier.ml  Bezier.mli  Binary.ml  Boxes.ml  Boxes.mli  CFF.ml  CFF.mli  CHANGES.md  Config.ml  Constants.ml  DefaultFormat.ml  DefaultGrammar.txp  Diag.ml  Doc.txp  Drivers.ml  Drivers.mli  Fonts.ml  Fonts.mli  GNUmakefile  Hypenate.ml  Hyphenate.ml  Hyphenate.mli  Knuth.ml  META  Makefile  Maths.ml  Opentype.ml  Opentype.mli  Output.ml  Parameters.ml  Parser.dyp  Patoline.txp  Portfile  README  README.md  (+26 more)
.github/workflows/: ci.yml
Accessoires/: patomote_macos.m
Fonts/: CFF.ml  CFF.mli  FTypes.ml  FTypes.mli  FontCFF.ml  FontOpentype.ml  FontsTypes.ml  FontsTypes.mli  Opentype.ml  Opentype.mli  Rules.mk
Fonts/Alegreya/: OFL.txt
Fonts/KacstOne/: LICENSE
Fonts/lmodern/: LICENSE  README-lmmath
Hyphenation/: .gitignore  Makefile  Rules.mk  en.hdict
Otf/Asana-Math/: FontLog.txt
Otf/NotCourierSans/: NotCourierSans License.txt
Output/: OutputCommon.ml  OutputDrawing.ml  OutputPaper.ml
Output/Drivers/: Pdf.ml
Tools/: file_to_string.ml  fixfont.sh  pdfclick  sample.xpdfrc
archlinux/: PKGBUILD  README  fetch-current.sh
attic/: GNUmakefile  README.md  configure.ml
attic/debian/: README.Debian  changelog  clean  copyright  fonts-euler.dirs  fonts-oflb-asana-math-full.dirs  fonts-philosopher.dirs  fonts-philosopher.install  gen_libtypography_postinst.ml  libdecap-ocaml.install  libtypography-ocaml-dev.triggers  libunicodelib-ocaml-dev.install  patoline-driver-cairo.install  patoline-driver-gl.install  patoline-driver-image.install  patoline-driver-net.install  patoline-driver-svg.install  patoline-format-lm.install  patoline.dirs  (+3 more)
bibi/: bibi.ml  dune
cesure/: META  cesure.ml  dune  hyphen.ml
config/: patConfig.ml
debian/: changelog  control  copyright  fonts-alegreya.dirs  fonts-alegreya.install  fonts-euler.install  fonts-oflb-asana-math-full.dirs  fonts-oflb-asana-math-full.install  libglr-ocaml.install  libimagelib-ocaml-dev.install  libtypography-ocaml-dev.dirs  libtypography-ocaml-dev.install  libtypography-ocaml-dev.postinst  libtypography-ocaml-dev.prerm  patoline-driver-gl.install  patoline-driver-html.install  patoline-driver-image.install  patoline-fonts.dirs  patoline-fonts.install  patoline-mode.dirs  patoline.dirs  patoline.install  rules  texprime-fonts.dirs  texprime-fonts.install  texprime.dirs  texprime.install
editors/: Rules.mk
editors/emacs/: .gitignore  SubstKey.ml  UnicodeScripts.ml  dune  patoline-input.pre  patoline-mode.el  subst_key.ml  unicode_scripts.ml
emacs/: Makefile  SubstKey.ml  patoline-input.pre  patoline-mode.el
examples/: 1000i.txp  100i.txp  Makefile  README.md  TD1.txp  TestFonts.txp  arrayproof.txp  bacon-ipsum-long.txp  bacon-ipsum-short.txp  bib.bibi  biblio.txp  colors.txp  demo.txp  dune  eq.txp  example.txp  genealogy.txp  giac_test.txp  hello_world.txp  imagelib_test.txp  lambda_calculus.txp  long_par.txp  minimal.txp  moyen_par.txp  newbie.txp  openStreetMap.txp  rimbaud_full.txt  sections.txp  seq.txp  slides.txp  stack_text.txp  test_200par.tex  test_200par.txp  utf8-pb.txp  utf8.txp  xkcd.txp
fonts/: Rules.mk  dune
formats/: DefaultFormat.ml  FormatArticle.ml  FormatLetter.ml  FormatLivre.ml  FormatMemoire.ml  FormatSlides.ml  FormatThese.ml  FormatWeb.ml  LMFormat.ml  SimpleSlides.ml  dune
glr/: META  Makefile  charset.ml  glr.ml  glr.mli
grammars/: dune
hyphs/: Rules.mk  dune
pa_patoline/: .gitignore  Subsup.ml  dune  pa_patoline.ml  prefixTree.ml
patconfig/: buildInfo.mli  config.ml  config.mli  configRC.mli  dune  gen_buildInfo  patConfig.ml  patConfig.mli  patDefault.ml
patfonts/: .gitignore  FTypes.ml  FUtil.ml  Fonts.ml  Fonts.mli  dune  gen_ranges.ml
patfonts/CFF/: CFF.ml  Type2.ml
patfonts/Opentype/: Cmap.ml  Opentype.ml  Opentype_layout.ml  Subst.ml
patfonts/isoAdobe/: isoadobe.source
patobook/: .gitignore  Drawings.txp  Editors.txp  Extending.txp  FirstDocuments.txp  Introduction.txp  Makefile  PatoMaths.txp  Programming.txp  Typesetting.txp  biblio.bib  patobook.txp  test.txp
patobuild/: build.ml  dune  parallel.ml  patoline.ml
patodb/: dune  patodb.ml  patodb_memory.ml  patodb_mysql.ml  patodb_sqlite3.ml
patoline/: index.html
patoraw/: Bezier.ml  Bezier.mli  Driver.ml  Driver.mli  RawContent.ml  dune
patutil/: Base64.ml  Util.ml  Zipper.ml  dune
permap/: dune  permap.ml  permap.mli
plot/: dune  plot.ml
proof/: Makefile  dune  proof.ml
src/: ArticleFormat.ml  Badness.ml  Binary.ml  Break.ml  Constants.ml  DefaultFormat.ml  DefaultGrammar.txp  Diag.ml  Document.ml  Document.mli  Fonts.mli  Hyphenate.mli  Log.ml  META  Main.ml  Makefile  Maths.ml  OutputDrawing.ml  Parameters.ml  Parser.dyp  Rules.mk  Section.ml  Texprime.ml  Typeset.ml  Typeset.mli  Typography.ml  Util.ml  Util.mli  _tags  myocamlbuild.ml
tests/: .gitignore  LaTeX-macros.tex  Makefile  MathText.txp  Notre_Dame_de_Paris_Hugo.txp  TD1.txp  args.txp  caml_after.txp  caml_before.txp  center.txp  collisions.ml  comment.txp  dejaVu.txp  demo.txp  diag1.txp  diag12.txp  diag13.txp  diag15.txp  diag2.txp  diag3.txp  diag3d.txp  diag4.txp  diag5.txp  diag6.txp  diag7.txp  diag9.txp  document-problem.ml  document.ml  enumref.txp  features.ml  fviewer.txp  gram.txp  gram2.txp  graphics_font.ml  grosseFigure.txp  half-center.txp  i100.txp  long_par.txp  math.txp  math.typ  (+32 more)
tools/: copyright.ml  sample.xpdfrc
typography/: Badness.ml  Box.ml  Break.ml  Break.mli  Complete.ml  ConfigFindFontFontconfig.ml  ConfigFindFontLegacy.ml  Debug.ml  DefaultMacros.ml  Diagrams.ml  Distance.ml  Document.ml  Euler.ml  Maths.ml  Offset.ml  Offset.mli  OutputDrawing.ml  PageLayout.ml  TableOfContents.ml  Verbatim.ml  dune  test_offset.ml
typography/ConfigFindFont/: ConfigFindFontFC.ml
unicode/: UCharInfo.ml  UTF.ml  dune  pa_unicode_data.ml
unicodelib/: Rules.mk  UCharInfo.ml  UTF.ml  UTF32.ml  UTF8.ml  UTFConvert.ml  config.ml  dune  pa_convert.ml  pa_unicode_data.ml
unicodelib/data/: ReadMe.txt  fetch_data.sh
vim/: patoline.vim
(+2025 files in other folders)
