(install
  (section share)
  (files
    (DejaVu-2.34/DejaVuSerifCondensed.ttf as fonts/DejaVu-2.34/DejaVuSerifCondensed.ttf)
    (DejaVu-2.34/DejaVuSansMono-BoldOblique.ttf as fonts/DejaVu-2.34/DejaVuSansMono-BoldOblique.ttf)
    (DejaVu-2.34/DejaVuSerif-Italic.ttf as fonts/DejaVu-2.34/DejaVuSerif-Italic.ttf)
    (DejaVu-2.34/DejaVuSerif-BoldItalic.ttf as fonts/DejaVu-2.34/DejaVuSerif-BoldItalic.ttf)
    (DejaVu-2.34/DejaVuSans-Oblique.ttf as fonts/DejaVu-2.34/DejaVuSans-Oblique.ttf)
    (DejaVu-2.34/DejaVuSerifCondensed-BoldItalic.ttf as fonts/DejaVu-2.34/DejaVuSerifCondensed-BoldItalic.ttf)
    (DejaVu-2.34/DejaVuSans-ExtraLight.ttf as fonts/DejaVu-2.34/DejaVuSans-ExtraLight.ttf)
    (DejaVu-2.34/DejaVuSans-BoldOblique.ttf as fonts/DejaVu-2.34/DejaVuSans-BoldOblique.ttf)
    (DejaVu-2.34/DejaVuSerif.ttf as fonts/DejaVu-2.34/DejaVuSerif.ttf)
    (DejaVu-2.34/DejaVuSans.ttf as fonts/DejaVu-2.34/DejaVuSans.ttf)
    (DejaVu-2.34/DejaVuSerifCondensed-Italic.ttf as fonts/DejaVu-2.34/DejaVuSerifCondensed-Italic.ttf)
    (DejaVu-2.34/DejaVuSansCondensed-Oblique.ttf as fonts/DejaVu-2.34/DejaVuSansCondensed-Oblique.ttf)
    (DejaVu-2.34/DejaVuSansCondensed-BoldOblique.ttf as fonts/DejaVu-2.34/DejaVuSansCondensed-BoldOblique.ttf)
    (DejaVu-2.34/DejaVuSans-Bold.ttf as fonts/DejaVu-2.34/DejaVuSans-Bold.ttf)
    (DejaVu-2.34/DejaVuSansMono-Oblique.ttf as fonts/DejaVu-2.34/DejaVuSansMono-Oblique.ttf)
    (DejaVu-2.34/DejaVuSansMono.ttf as fonts/DejaVu-2.34/DejaVuSansMono.ttf)
    (DejaVu-2.34/DejaVuSerif-Bold.ttf as fonts/DejaVu-2.34/DejaVuSerif-Bold.ttf)
    (DejaVu-2.34/DejaVuSerifCondensed-Bold.ttf as fonts/DejaVu-2.34/DejaVuSerifCondensed-Bold.ttf)
    (DejaVu-2.34/DejaVuSansCondensed-Bold.ttf as fonts/DejaVu-2.34/DejaVuSansCondensed-Bold.ttf)
    (DejaVu-2.34/DejaVuSansMono-Bold.ttf as fonts/DejaVu-2.34/DejaVuSansMono-Bold.ttf)
    (DejaVu-2.34/DejaVuSansCondensed.ttf as fonts/DejaVu-2.34/DejaVuSansCondensed.ttf)
    (Asana-Math/Asana-Math.ttf as fonts/Asana-Math/Asana-Math.ttf)
    (Asana-Math/Asana-Math.otf as fonts/Asana-Math/Asana-Math.otf)
    (Philosopher/Philosopher-BoldItalic.otf as fonts/Philosopher/Philosopher-BoldItalic.otf)
    (Philosopher/Philosopher-Regular.otf as fonts/Philosopher/Philosopher-Regular.otf)
    (Philosopher/Philosopher-Italic.otf as fonts/Philosopher/Philosopher-Italic.otf)
    (Philosopher/Philosopher-Bold.otf as fonts/Philosopher/Philosopher-Bold.otf)
    (TexGyreCursor/texgyrecursor-bold.otf as fonts/TexGyreCursor/texgyrecursor-bold.otf)
    (TexGyreCursor/texgyrecursor-italic.otf as fonts/TexGyreCursor/texgyrecursor-italic.otf)
    (TexGyreCursor/texgyrecursor-bolditalic.otf as fonts/TexGyreCursor/texgyrecursor-bolditalic.otf)
    (TexGyreCursor/texgyrecursor-regular.otf as fonts/TexGyreCursor/texgyrecursor-regular.otf)
    (Alegreya/AlegreyaSC-Regular.otf as fonts/Alegreya/AlegreyaSC-Regular.otf)
    (Alegreya/AlegreyaSC-Italic.otf as fonts/Alegreya/AlegreyaSC-Italic.otf)
    (Alegreya/Alegreya-BlackItalic.otf as fonts/Alegreya/Alegreya-BlackItalic.otf)
    (Alegreya/Alegreya-Bold.otf as fonts/Alegreya/Alegreya-Bold.otf)
    (Alegreya/AlegreyaSC-Bold.otf as fonts/Alegreya/AlegreyaSC-Bold.otf)
    (Alegreya/Alegreya-Italic.otf as fonts/Alegreya/Alegreya-Italic.otf)
    (Alegreya/AlegreyaSC-Black.otf as fonts/Alegreya/AlegreyaSC-Black.otf)
    (Alegreya/Alegreya-BoldItalic.otf as fonts/Alegreya/Alegreya-BoldItalic.otf)
    (Alegreya/AlegreyaSC-BoldItalic.otf as fonts/Alegreya/AlegreyaSC-BoldItalic.otf)
    (Alegreya/AlegreyaSC-BlackItalic.otf as fonts/Alegreya/AlegreyaSC-BlackItalic.otf)
    (Alegreya/Alegreya-Black.otf as fonts/Alegreya/Alegreya-Black.otf)
    (Alegreya/Alegreya-Regular.otf as fonts/Alegreya/Alegreya-Regular.otf)
    (BitstreamVeraSansMono/BitstreamVeraSansMono-Oblique.otf as fonts/BitstreamVeraSansMono/BitstreamVeraSansMono-Oblique.otf)
    (BitstreamVeraSansMono/BitstreamVeraSansMono-Roman.otf as fonts/BitstreamVeraSansMono/BitstreamVeraSansMono-Roman.otf)
    (BitstreamVeraSansMono/BitstreamVeraSansMono-BoldOb.otf as fonts/BitstreamVeraSansMono/BitstreamVeraSansMono-BoldOb.otf)
    (BitstreamVeraSansMono/BitstreamVeraSansMono-Bold.otf as fonts/BitstreamVeraSansMono/BitstreamVeraSansMono-Bold.otf)
    (Euler/euler.otf as fonts/Euler/euler.otf)
    (FreeFont/FreeSerif.ttf as fonts/FreeFont/FreeSerif.ttf)
    (FreeFont/FreeSerifItalic.ttf as fonts/FreeFont/FreeSerifItalic.ttf)
    (FreeFont/FreeSerifBold.ttf as fonts/FreeFont/FreeSerifBold.ttf)
    (FreeFont/FreeSerifBoldItalic.ttf as fonts/FreeFont/FreeSerifBoldItalic.ttf)
    (FreeFont/FreeSans.ttf as fonts/FreeFont/FreeSans.ttf)
    (FreeFont/FreeSansOblique.ttf as fonts/FreeFont/FreeSansOblique.ttf)
    (FreeFont/FreeSansBold.ttf as fonts/FreeFont/FreeSansBold.ttf)
    (FreeFont/FreeSansBoldOblique.ttf as fonts/FreeFont/FreeSansBoldOblique.ttf)
    (FreeFont/FreeMono.ttf as fonts/FreeFont/FreeMono.ttf)
    (FreeFont/FreeMonoOblique.ttf as fonts/FreeFont/FreeMonoOblique.ttf)
    (FreeFont/FreeMonoBold.ttf as fonts/FreeFont/FreeMonoBold.ttf)
    (FreeFont/FreeMonoBoldOblique.ttf as fonts/FreeFont/FreeMonoBoldOblique.ttf)
    (KacstOne/KacstOne-Bold.ttf as fonts/KacstOne/KacstOne-Bold.ttf)
    (KacstOne/KacstOne.ttf as fonts/KacstOne/KacstOne.ttf)
    (AMS/ams.otf as fonts/AMS/ams.otf)))
